--- a/docs/content/docs/configuration/environment-variables.mdx
+++ b/docs/content/docs/configuration/environment-variables.mdx
@@ -5,6 +5,10 @@ description: Complete list of environment variables
 
 ## Agent Environment Variables
 
+> [!NOTE]
+> **Configuration Persistence**
+> The agent defined by `AGENT_API_URL` and `AGENT_API_TOKEN` in the Dashboard's environment variables acts as the **Environment Agent**. This agent configuration is immutable in the UI. If you omit these variables, they revert to defaults. To manage agents purely via UI, you still need at least one Environment Agent (which can be a dummy or local one) to act as the primary connection.
+
 | Variable | Description | Default | Required |
 |----------|-------------|---------|----------|
 | `TRAEFIK_LOG_DASHBOARD_ACCESS_PATH` | Path to Traefik access log | `/logs/access.log` | Yes |
@@ -16,6 +20,23 @@ description: Complete list of environment variables
 | `TRAEFIK_LOG_DASHBOARD_GEOIP_CITY_DB` | Path to GeoLite2-City.mmdb | - | If GeoIP enabled |
 | `TRAEFIK_LOG_DASHBOARD_GEOIP_COUNTRY_DB` | Path to GeoLite2-Country.mmdb | - | If GeoIP enabled |
 | `PORT` | Agent listen port | `5000` | No |
+
+### Dashboard Configuration
+
+The dashboard service requires the GeoIP database path to be configured.
+
+| Variable | Description | Default | Required |
+|----------|-------------|---------|----------|
+| `GEOIP_DB_PATH` | Path to the GeoLite2-City.mmdb file inside the container | `/geoip/GeoLite2-City.mmdb` | Yes |
+
+```yaml
+services:
+  traefik-dashboard:
+    environment:
+      - GEOIP_DB_PATH=/geoip/GeoLite2-City.mmdb
+    volumes:
+      - ./geoip/GeoLite2-City.mmdb:/geoip/GeoLite2-City.mmdb:ro
+```
 
 ## Dashboard Environment Variables
 
