--- a/docs/content/docs/components/agent.mdx
+++ b/docs/content/docs/components/agent.mdx
@@ -5,7 +5,32 @@ description: A lightweight Go service for parsing and streaming Traefik logs in 
 
 A lightweight Go service for parsing and streaming Traefik logs in real-time.
 
-## Deployment Guide
+## Features
+
+- High-performance log parsing with Go
+- Support for JSON and Common Log Format (CLF)
+- Position tracking (only reads new entries)
+- Compressed (.gz) log file support
+- System resource monitoring (CPU, memory, disk)
+- Bearer token authentication
+- RESTful API endpoints
+
+## Deployment
+
+### Docker (Recommended)
+
+```bash
+docker run -d \
+  -p 5000:5000 \
+  -v /var/log/traefik:/logs:ro \
+  -v ./data/positions:/data \
+  -e TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/logs/access.log \
+  -e TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN=your-secret-token \
+  -e TRAEFIK_LOG_DASHBOARD_SYSTEM_MONITORING=true \
+  hhftechnology/traefik-log-dashboard-agent:latest
+```
+
+### Binary Deployment
 
 ```bash
 git clone https://github.com/hhftechnology/traefik-log-dashboard.git
@@ -20,63 +45,97 @@ ssh user@yourserver
 chmod +x /usr/local/bin/agent
 ```
 
-> If your Traefik log path is different from the default `/var/log/traefik`, set the correct path as an environment variable within a `.env` file.
->
-> ```bash
-> TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/path/to/access/logs
-> TRAEFIK_LOG_DASHBOARD_ERROR_PATH=/path/to/error/logs
-> ```
+## Configuration
 
-### Access Logs
+### Log Paths
 
-By default, when `TRAEFIK_LOG_DASHBOARD_ACCESS_PATH` is set to a directory, all compressed (.gz) and uncompressed (.log) log files within the directory will be served. To target a single `access.log` file, use a full filepath instead.
+Set the path to your Traefik logs using environment variables:
 
 ```bash
-TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/path/to/traefik/access/logs
-# or...
-TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/path/to/traefik/access.log
+# Single file
+TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/var/log/traefik/access.log
+TRAEFIK_LOG_DASHBOARD_ERROR_PATH=/var/log/traefik/traefik.log
+
+# Or directory (all .log and .gz files)
+TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/var/log/traefik
 ```
 
-### Error Logs
-
-By default, any access log path provided will be checked for error logs if it is pointing to a directory. If your error logs are stored in a different path, or targeting a single log file instead, you can specify the location separately using `TRAEFIK_LOG_DASHBOARD_ERROR_PATH`.
-
-```bash
-TRAEFIK_LOG_DASHBOARD_ERROR_PATH=/path/to/traefik/error/logs
-# or...
-TRAEFIK_LOG_DASHBOARD_ERROR_PATH=/path/to/traefik/traefik.log
-```
+When pointing to a directory:
+- All `.log` files are read
+- Compressed `.gz` files are supported
+- Error logs are auto-detected if they contain "error" in the filename
 
 ### Port
 
-The default port is 5000. If this is already in use, specify an alternative with the `PORT` environment variable, or with the `--port` command line argument.
+The default port is `5000`. Override with:
 
-### Locations
-
-IP-location inference can be set up quickly, utilising <a href="https://www.maxmind.com/en/home">MaxMind's free GeoLite2 database</a>. Simply drop the `GeoLite2-Country.mmdb` or `GeoLite2-City.mmdb` file in the root folder of the agent deployment.
+```bash
+PORT=8080
+```
 
 ### System Monitoring
 
-By default, system monitoring is disabled. To enable it, set the `TRAEFIK_LOG_DASHBOARD_SYSTEM_MONITORING` environment variable to `true`, or with the `--system-monitoring` command line argument.
+Enable CPU, memory, and disk usage monitoring:
+
+```bash
+TRAEFIK_LOG_DASHBOARD_SYSTEM_MONITORING=true
+TRAEFIK_LOG_DASHBOARD_MONITOR_INTERVAL=2000  # milliseconds
+```
 
 ### Authentication
 
-When using the agent, it's recommended to set an authentication token. Set the private environment variable `TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN` to the same value for both the agent (server) and the dashboard (client) deployment.
-
-The agent will verify that the auth token sent by the client matches the locally stored value before allowing access to the logs.
-
-### Docker
+Set a secure authentication token:
 
 ```bash
-docker build -t traefik-log-dashboard-agent .
-docker run -d \
-  -p 5000:5000 \
-  -v /var/log/traefik:/var/log/traefik:ro \
-  -e TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/var/log/traefik \
-  -e TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN=your-secret-token \
-  traefik-log-dashboard-agent
+TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN=your-secret-token
 ```
 
-#### HTTPS
+The agent validates the Bearer token in the `Authorization` header for all API requests.
 
-Deploying over a secure HTTPS connection is always recommended. Without this, you risk exposing any personal information within your log files such as IP addresses.
+## API Endpoints
+
+| Endpoint | Method | Description |
+|----------|--------|-------------|
+| `/api/logs/access` | GET | Fetch access logs |
+| `/api/logs/error` | GET | Fetch error logs |
+| `/api/logs/status` | GET | Agent status and health |
+| `/api/system/resources` | GET | CPU, memory, disk usage |
+| `/api/system/logs` | GET | Log file sizes |
+
+### Query Parameters
+
+| Parameter | Type | Description |
+|-----------|------|-------------|
+| `position` | int64 | Read from this byte position |
+| `includeCompressed` | bool | Include .gz files |
+
+## Health Check
+
+The agent exposes a health endpoint for container orchestration:
+
+```yaml
+healthcheck:
+  test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/api/logs/status"]
+  interval: 2m
+  timeout: 10s
+  retries: 3
+  start_period: 30s
+```
+
+## Security
+
+### HTTPS
+
+Deploy behind a reverse proxy with TLS for production:
+
+```yaml
+# Traefik labels example
+labels:
+  - "traefik.enable=true"
+  - "traefik.http.routers.agent.rule=Host(`agent.example.com`)"
+  - "traefik.http.routers.agent.tls=true"
+```
+
+### Token Authentication
+
+Always set `TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN` in production. The dashboard and agent must use the same token.
