--- a/docs/content/docs/components/dashboard.mdx
+++ b/docs/content/docs/components/dashboard.mdx
@@ -8,13 +8,13 @@ Real-time analytics and monitoring dashboard for Traefik reverse proxy logs buil
 ## Features
 
 - **Real-time Monitoring**: Live updates of Traefik access logs with automatic refresh
-- **Advanced Analytics**: 
+- **Advanced Analytics**:
   - Request metrics (total requests, requests per second)
   - Response time analysis (average, P95, P99)
   - Status code distribution with error rate tracking
   - Top routes and endpoints by traffic volume
 - **Router & Service Metrics**: Track performance at router and backend service levels
-- **Geographic Distribution**: Visualize request origins by country
+- **Geographic Distribution**: Automatic IP geolocation with interactive map visualization
 - **User Agent Analysis**: Browser and client type breakdown
 - **Timeline Visualization**: Request volume over time with interactive charts
 - **Demo Mode**: Test the dashboard with simulated data
@@ -22,15 +22,17 @@ Real-time analytics and monitoring dashboard for Traefik reverse proxy logs buil
 ## Tech Stack
 
 - **Framework**: Next.js 15 with App Router
-- **UI**: React 19, Tailwind CSS 4
-- **Charts**: Chart.js, D3.js
+- **UI**: React 19, Tailwind CSS
+- **Charts**: Recharts, D3.js
+- **Database**: SQLite (better-sqlite3)
+- **GeoIP**: MaxMind GeoLite2 via geolite2-redist
 - **Icons**: Lucide React
 - **Language**: TypeScript
 
 ## Prerequisites
 
-- Node.js 18.x or higher
-- npm 9.x or higher
+- Node.js 20.x or higher
+- npm 10.x or higher
 - Traefik Log Dashboard Agent running (for live data)
 
 ## Installation
@@ -47,6 +49,11 @@ Create a `.env.local` file in the dashboard directory:
 # Agent API Configuration
 AGENT_API_URL=http://localhost:5000
 AGENT_API_TOKEN=your_secret_token_here
+AGENT_NAME=Local Agent
+
+# Display Configuration
+NEXT_PUBLIC_SHOW_DEMO_PAGE=true
+NEXT_PUBLIC_MAX_LOGS_DISPLAY=500
 ```
 
 ## Development
@@ -85,10 +92,37 @@ Run the container:
 
 ```bash
 docker run -p 3000:3000 \
+  -v ./data:/app/data \
   -e AGENT_API_URL=http://agent:5000 \
   -e AGENT_API_TOKEN=your_token \
+  -e AGENT_NAME=Production \
   traefik-log-dashboard
 ```
+
+## GeoIP (Geographic Location)
+
+The dashboard includes automatic GeoIP functionality:
+
+- Uses [geolite2-redist](https://www.npmjs.com/package/geolite2-redist) which auto-downloads MaxMind databases
+- No configuration required - works out of the box
+- Optional: Set `GEOIP_DB_PATH` to use a custom database location
+
+## API Endpoints
+
+The dashboard exposes these internal API routes:
+
+| Endpoint | Description |
+|----------|-------------|
+| `/api/logs/access` | Fetch access logs from agent |
+| `/api/logs/error` | Fetch error logs from agent |
+| `/api/logs/status` | Get agent status |
+| `/api/system/resources` | Get system resources |
+| `/api/system/logs` | Get log file sizes |
+| `/api/location/lookup` | GeoIP lookup for IPs |
+| `/api/location/status` | GeoIP service status |
+| `/api/agents` | Manage agent configurations |
+| `/api/alerts` | Alert rule management |
+| `/api/webhooks` | Webhook configuration |
 
 ## Usage
 
@@ -100,40 +134,12 @@ Navigate to `/dashboard` to view real-time analytics from your Traefik agent.
 
 Navigate to `/dashboard/demo` to view the dashboard with simulated data (no agent required).
 
-## API Endpoints
+### Settings
 
-The dashboard proxies requests to the agent through these endpoints:
-
-- `GET /api/logs/access` - Fetch access logs
-- `GET /api/logs/error` - Fetch error logs
-- `GET /api/logs/status` - Get agent status
-- `GET /api/system/resources` - Get system resources
-- `GET /api/system/logs` - Get log file sizes
-
-## Key Metrics
-
-### Request Metrics
-- Total requests
-- Requests per second
-- Change percentage
-
-### Response Time
-- Average response time
-- P95 percentile
-- P99 percentile
-
-### Status Codes
-- 2xx (Success)
-- 3xx (Redirect)
-- 4xx (Client Error)
-- 5xx (Server Error)
-- Error rate percentage
-
-### Routes & Services
-- Top routes by request volume
-- Backend service performance
-- Router metrics
-- Average response times
+- `/settings/agents` - Manage multiple agent connections
+- `/settings/alerts` - Configure alert rules and webhooks
+- `/settings/filters` - Set up log filters
+- `/settings/historical` - View historical data
 
 ## Traefik Log Format
 
@@ -143,6 +149,7 @@ The dashboard supports both JSON and CLF (Common Log Format) Traefik logs:
 ```json
 {
   "ClientAddr": "192.168.1.100:54321",
+  "ClientHost": "192.168.1.100",
   "RequestMethod": "GET",
   "RequestPath": "/api/users",
   "DownstreamStatus": 200,
