--- a/docs/content/docs/quickstart.mdx
+++ b/docs/content/docs/quickstart.mdx
@@ -7,14 +7,13 @@ description: Get up and running with Traefik Log Dashboard
 
 - Docker and Docker Compose
 - Traefik configured with JSON access logs
-- (Optional) MaxMind GeoIP databases for geolocation
 
 ## Single Agent Setup
 
 ### 1. Create directory structure
 
 ```bash
-mkdir -p traefik-dashboard/{data/{logs,geoip,positions,dashboard}}
+mkdir -p traefik-dashboard/data/{logs,positions,dashboard}
 cd traefik-dashboard
 ```
 
@@ -24,48 +23,42 @@ cd traefik-dashboard
 services:
   # Traefik Log Dashboard Agent
   traefik-agent:
-    image: hhftechnology/traefik-log-dashboard-agent:dev-dashboard
+    image: hhftechnology/traefik-log-dashboard-agent:latest
     container_name: traefik-log-dashboard-agent
     restart: unless-stopped
     ports:
       - "5000:5000"
     volumes:
       - ./data/logs:/logs:ro
-      - ./data/geoip:/geoip:ro  # MaxMind GeoIP databases
       - ./data/positions:/data
     environment:
       # Log Paths
       - TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/logs/access.log
-      - TRAEFIK_LOG_DASHBOARD_ERROR_PATH=/logs/access.log
-      
-      # Authentication
-      - TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN=d41d8cd98f00b204e9800998ecf8427e
-      
+      - TRAEFIK_LOG_DASHBOARD_ERROR_PATH=/logs/traefik.log
+
+      # Authentication - REPLACE WITH YOUR TOKEN
+      - TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN=your-secret-token
+
       # System Monitoring
       - TRAEFIK_LOG_DASHBOARD_SYSTEM_MONITORING=true
-      
-      # GeoIP Configuration
-      - TRAEFIK_LOG_DASHBOARD_GEOIP_ENABLED=true
-      - TRAEFIK_LOG_DASHBOARD_GEOIP_CITY_DB=/geoip/GeoLite2-City.mmdb
-      - TRAEFIK_LOG_DASHBOARD_GEOIP_COUNTRY_DB=/geoip/GeoLite2-Country.mmdb
-      
+
       # Log Format
       - TRAEFIK_LOG_DASHBOARD_LOG_FORMAT=json
-      
+
       # Server Port
       - PORT=5000
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/api/logs/status"]
-      interval: 30s
+      interval: 2m
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 30s
     networks:
       - traefik-network
 
   # Traefik Log Dashboard - Next.js web UI
   traefik-dashboard:
-    image: hhftechnology/traefik-log-dashboard:dev-dashboard
+    image: hhftechnology/traefik-log-dashboard:latest
     container_name: traefik-log-dashboard
     restart: unless-stopped
     user: "1001:1001"
@@ -74,14 +67,18 @@ services:
     volumes:
       - ./data/dashboard:/app/data
     environment:
-      # Agent Configuration (Default/Environment Agent)
+      # Agent Configuration - REPLACE WITH YOUR TOKEN
       - AGENT_API_URL=http://traefik-agent:5000
-      - AGENT_API_TOKEN=d41d8cd98f00b204e9800998ecf8427e
-      - AGENT_NAME=Default Agent  # Optional: Name for environment agent
-      
+      - AGENT_API_TOKEN=your-secret-token
+      - AGENT_NAME=Default Agent
+
       # Node Environment
       - NODE_ENV=production
       - PORT=3000
+
+      # Display Configuration
+      - NEXT_PUBLIC_SHOW_DEMO_PAGE=true
+      - NEXT_PUBLIC_MAX_LOGS_DISPLAY=500
     depends_on:
       traefik-agent:
         condition: service_healthy
@@ -105,6 +102,10 @@ openssl rand -hex 32
 ### 4. Start the services
 
 ```bash
+# Create the network if it doesn't exist
+docker network create traefik-network 2>/dev/null || true
+
+# Start services
 docker compose up -d
 ```
 
@@ -122,7 +123,7 @@ accessLog:
   filePath: "/logs/access.log"
   format: json
   bufferingSize: 100
-  
+
   fields:
     defaultMode: keep
     names:
@@ -133,3 +134,35 @@ accessLog:
         Authorization: drop
         Cookie: drop
 ```
+
+## Multi-Agent Setup
+
+To monitor multiple Traefik instances:
+
+1. Deploy an agent alongside each Traefik instance
+2. Configure each agent with a unique authentication token
+3. Add agents via the Dashboard UI at `/settings/agents`
+
+```yaml
+# Example: Second agent for staging environment
+traefik-agent-staging:
+  image: hhftechnology/traefik-log-dashboard-agent:latest
+  environment:
+    - TRAEFIK_LOG_DASHBOARD_ACCESS_PATH=/logs/access.log
+    - TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN=staging-secret-token
+    - TRAEFIK_LOG_DASHBOARD_SYSTEM_MONITORING=true
+  volumes:
+    - /var/log/traefik-staging:/logs:ro
+```
+
+## GeoIP (Geographic Location)
+
+Geographic IP lookup is automatically enabled in the dashboard. The dashboard uses [geolite2-redist](https://www.npmjs.com/package/geolite2-redist) which auto-downloads MaxMind GeoLite2 databases.
+
+No additional configuration is required for GeoIP functionality.
+
+## Next Steps
+
+- [Configuration](/docs/configuration) - Detailed configuration options
+- [Features](/docs/features) - Explore all dashboard features
+- [Troubleshooting](/docs/troubleshooting) - Common issues and solutions
