--- a/docs/content/docs/troubleshooting.mdx
+++ b/docs/content/docs/troubleshooting.mdx
@@ -1,53 +1,146 @@
 ---
-title: Troubleshooting & FAQ
-description: Common issues, configuration nuances, and frequently asked questions.
+title: Troubleshooting
+description: Common issues and solutions
 ---
 
-## Configuration
+import { Callout } from 'fumadocs-ui/components/callout';
 
-### Environment Agent vs. Manual Agents
+## Agent Connection Issues
 
-One of the most important concepts to understand in Traefik Log Dashboard is the distinction between the **Environment Agent** and **Manual Agents**.
+### Dashboard shows "Agent Offline"
 
-> [!IMPORTANT]
-> **At least one agent must be configured via environment variables.**
->
-> When you deploy the dashboard using `docker-compose.yml`, the agent configured via `AGENT_API_URL` and `AGENT_API_TOKEN` becomes the **Environment Agent**.
->
-> - This agent **cannot** be modified or deleted from the Dashboard UI.
-> - If you remove these environment variables, the dashboard will revert to default values or fail to connect.
-> - This is by design to ensure there is always a "source of truth" agent that persists across container recreations.
+1. **Check agent is running**:
+   ```bash
+   docker ps | grep traefik-agent
+   ```
 
-To add more agents that you *can* manage entirely from the UI:
-1. Keep your primary agent defined in `docker-compose.yml`.
-2. Use the **Settings > Agents** page in the dashboard to add secondary agents. These "Manual Agents" are stored in the SQLite database and can be edited/deleted freely.
+2. **Verify agent health**:
+   ```bash
+   curl http://localhost:5000/api/logs/status
+   ```
 
-## Common Issues
+3. **Check token match**: Ensure `TRAEFIK_LOG_DASHBOARD_AUTH_TOKEN` on the agent matches `AGENT_API_TOKEN` on the dashboard.
 
-### Is it possible to connect remote agents without exposing port 5000?
+4. **Network connectivity**: If using Docker, ensure both containers are on the same network.
 
-**No, not currently.**
+### Cannot connect to remote agents
 
-The dashboard architecture relies on direct HTTP communication with the agent's API.
-- The dashboard (running in your browser or Next.js server) needs to send HTTP requests to the Agent.
-- The Agent must expose its API port (default `5000`) to be reachable by the Dashboard.
+The dashboard requires direct HTTP connectivity to agents. Options:
 
-If security is a concern, we recommend:
-1. **VPN/Tunneling**: Use a VPN (like Tailscale or WireGuard) to connect the Dashboard and Agent securely without exposing ports to the public internet.
-2. **Reverse Proxy**: Put the Agent behind a reverse proxy (like Traefik itself) with Basic Auth or IP allow-listing, and configure the Dashboard to use that proxied URL.
+1. **VPN/Tunnel**: Use Tailscale, WireGuard, or similar to connect networks securely.
+2. **Reverse Proxy**: Put the agent behind Traefik with authentication and use the proxied URL.
+3. **Expose Port**: Only recommended for testing, not production.
 
-*(Ref: Issue #147)*
+## Log Parsing Issues
 
-### Dashboard Feature Requests & Planned Improvements
+### No logs appearing in dashboard
 
-We are actively working on improving the UI and UX. Some frequently requested features include:
+1. **Verify log path**: Check `TRAEFIK_LOG_DASHBOARD_ACCESS_PATH` points to the correct file.
+   ```bash
+   docker exec traefik-agent ls -la /logs/
+   ```
 
-#### 1. Filter Logs by Clicking
-**Request:** Allow filtering logs by simply clicking on headers (e.g., clicking a status code `500` filters for all errors).
-**Status:** Planned. We are looking into adding interactive headers to the log table for quicker filtering.
+2. **Check log format**: Ensure `TRAEFIK_LOG_DASHBOARD_LOG_FORMAT` matches your Traefik configuration (json or common).
 
-#### 2. Enhanced GeoIP Integration
-**Request:** Better integration between the Interactive Map and log filters (e.g., clicking a country on the map filters logs).
-**Status:** Under consideration for future releases.
+3. **Verify permissions**: The agent needs read access to log files.
 
-*(Ref: Issue #140)*
+### Logs show but metrics are wrong
+
+1. **Check time range**: The dashboard defaults to showing recent data. Adjust the time range filter.
+2. **Clear position file**: Delete `/data/.position` in the agent container to re-read logs from the beginning.
+
+## GeoIP Issues
+
+### Geographic data not showing
+
+<Callout type="info">
+GeoIP is handled automatically by the dashboard using [geolite2-redist](https://www.npmjs.com/package/geolite2-redist). No configuration needed.
+</Callout>
+
+1. **Check dashboard logs**: Look for GeoIP initialization errors.
+2. **Verify IPs are public**: Private IPs (10.x.x.x, 192.168.x.x, etc.) cannot be geolocated.
+3. **Container restart**: Restart the dashboard container to re-initialize GeoIP databases.
+
+### All IPs show as "Unknown" location
+
+- Private IP ranges cannot be geolocated
+- The 11.0.0.0/8 range is reserved and shows as "Unknown"
+- Check if requests are coming through a proxy that masks real IPs
+
+## Environment Agent
+
+### Cannot delete agent from UI
+
+<Callout type="warn">
+The agent configured via `AGENT_API_URL` and `AGENT_API_TOKEN` environment variables is protected and cannot be deleted from the UI.
+</Callout>
+
+This is by design to ensure you always have a primary agent connection. To change it:
+
+1. Update the environment variables in `docker-compose.yml`
+2. Restart the dashboard container
+
+### Multiple agents with same name
+
+Each agent should have a unique name. If adding agents manually, use descriptive names like:
+- `Production-DC1`
+- `Staging-Cloud`
+- `Edge-Server-1`
+
+## Alerting Issues
+
+### Discord notifications not sending
+
+1. **Verify webhook URL**: Test the webhook from **Settings > Alerts > Webhooks**.
+2. **Check background scheduler**: Ensure `ENABLE_BACKGROUND_SCHEDULER=true`.
+3. **Dashboard must be running**: Alerts are processed server-side but require the dashboard to be up.
+
+### Alerts firing too frequently
+
+1. Adjust threshold values in alert rules
+2. Increase the check interval (minimum 5 minutes)
+3. Use the "cooldown" period to prevent repeated alerts
+
+## Performance Issues
+
+### Dashboard is slow
+
+1. **Reduce log display limit**: Lower `NEXT_PUBLIC_MAX_LOGS_DISPLAY` (default: 500).
+2. **Check agent performance**: Monitor agent CPU/memory usage.
+3. **Narrow time range**: Use shorter time ranges for faster queries.
+
+### Agent consuming too much memory
+
+1. **Check log file size**: Very large log files can cause memory issues.
+2. **Enable position tracking**: Ensure the agent is only reading new entries.
+3. **Use log rotation**: Configure Traefik to rotate logs regularly.
+
+## Docker Issues
+
+### Permission denied on data volume
+
+The dashboard runs as user 1001:1001 by default. Fix permissions:
+
+```bash
+mkdir -p ./data/dashboard
+chown -R 1001:1001 ./data/dashboard
+```
+
+### Container keeps restarting
+
+Check container logs:
+```bash
+docker logs traefik-log-dashboard
+docker logs traefik-log-dashboard-agent
+```
+
+Common causes:
+- Missing required environment variables
+- Invalid log file paths
+- Database permission issues
+
+## Getting Help
+
+- **Documentation**: Check the [full documentation](/docs)
+- **Discord**: Join our [community](https://discord.gg/HDCt9MjyMJ)
+- **GitHub Issues**: [Report bugs](https://github.com/hhftechnology/traefik-log-dashboard/issues)
